[gd_scene load_steps=12 format=3 uid="uid://tmy4tqognhxm"]

[ext_resource type="Script" uid="uid://dkjpqbdvcfj7l" path="res://main.gd" id="1_kek77"]
[ext_resource type="PackedScene" uid="uid://caf7e0f235amn" path="res://Scenes/garden.tscn" id="2_0xm2m"]
[ext_resource type="AudioStream" uid="uid://jod54cf160v7" path="res://Assets/Sound/UpgradeReady.ogg" id="3_h2yge"]
[ext_resource type="AudioStream" uid="uid://cqrx5uv7lx73q" path="res://Assets/Music/TheUpgradeTree.ogg" id="4_1bvp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.945312, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(1, 0.986084, 0.109375, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0.12549, 1, 0, 0)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0.12549, 1, 0, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0, 0.4375, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.996094, 0.128403, 0.128403, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Main" type="Node3D"]
process_mode = 3
script = ExtResource("1_kek77")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/fill = SubResource("StyleBoxFlat_h2yge")
show_percentage = false

[node name="UpgradeLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = 403.0
offset_right = 347.0
offset_bottom = 491.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Upgrade Tree Progress"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourceLabels" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="GearsLabel" type="Label" parent="HUD/ResourceLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Gear: 0"
horizontal_alignment = 1

[node name="RubberLabel" type="Label" parent="HUD/ResourceLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Rubber: 0"
horizontal_alignment = 1

[node name="OilLabel" type="Label" parent="HUD/ResourceLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Oil: 0"
horizontal_alignment = 1

[node name="WaterLabel" type="Label" parent="HUD/ResourceLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Water: 0"
horizontal_alignment = 1

[node name="PauseScrene" type="RichTextLabel" parent="HUD"]
process_mode = 2
custom_minimum_size = Vector2(960, 580)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -290.0
offset_right = 480.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 24
theme_override_font_sizes/normal_font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_272bh")
text = "
Care for The Upgrade Tree and it will care for you!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="HUD/PauseScrene"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -38.0
offset_right = 213.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_1bvp3")
theme_override_styles/hover = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/normal = SubResource("StyleBoxFlat_7mycd")
text = "Play"

[node name="Button2" type="Button" parent="HUD/PauseScrene"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = 112.0
offset_right = 213.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_1bvp3")
theme_override_styles/hover = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/normal = SubResource("StyleBoxFlat_5vw27")
text = "Quit"

[node name="Garden" parent="." instance=ExtResource("2_0xm2m")]

[node name="GameLogic" type="Node3D" parent="."]
process_mode = 1

[node name="Timer" type="Timer" parent="GameLogic"]
autostart = true

[node name="UpgradeReadyBell" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_h2yge")
attenuation_model = 3
max_db = 0.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1bvp3")
autoplay = true

[connection signal="pressed" from="HUD/PauseScrene/Button" to="." method="toggle_pause"]
[connection signal="pressed" from="HUD/PauseScrene/Button2" to="." method="exit_game"]
[connection signal="upgraded" from="Garden" to="." method="upgrade_update"]
[connection signal="timeout" from="GameLogic/Timer" to="." method="_on_timer_timeout"]
